2011-01-20 Christian Feuersaenger <ludewich@users.sourceforge.net>
	- fixed 'x expr=\coordindex' bug when used in \addplot table \structure

2010-10-29 Christian Feuersaenger <ludewich@users.sourceforge.net>
	- improved TeX-programming-notes.tex (thanks to Frederik Heber!)

2010-10-20 Christian Feuersaenger <ludewich@users.sourceforge.net>
	- fixed bug: log basis x and plot expression (the sample logarithmically
	feature) did not work together.

2010-10-15 Christian Feuersaenger <ludewich@users.sourceforge.net>
	- added new predefined cycle list 'mark list*'
	- improved 'mark list': the otimes* marker now has a better visible
	distinction between fill and stroke
	- improved 'mark list': the fill color can now be specified manually with
	'mark list fill'

2010-10-14 Christian Feuersaenger <ludewich@users.sourceforge.net>
	- documented CMYK colormaps and shadings.
	- provided automatic changes to the colorbar styles such that colorbars
	also support CMYK without user input.

2010-10-13 Christian Feuersaenger <ludewich@users.sourceforge.net>
	- documented new pgf markers.
	- provided access to the final axis limits using
	\pgfkeysvalueof{/pgfplots/xmin}.
	- patch plot handler: improved display of sharp triangle corners by
	added the 'every patch' style with initial value 'miter limit=1'
	- added support for CMYK colormaps, and CMYK shadings.
	- added 'colormap default colorspace' feature

2010-10-11 Christian Feuersaenger <ludewich@users.sourceforge.net>
	- improved the \addplot3 graphics manual section (and fixed a small bug in
	it)
	- improved docs for contour plots
	- improved access of contour external to internal variables.

2010-10-06 Christian Feuersaenger <ludewich@users.sourceforge.net>
	- \addplot3 graphics: added support for reversed axis (untested)
	- fixed bug: 'scale mode=scale uniformly' did not work if z=(0,0).

2010-09-30 Christian Feuersaenger <ludewich@users.sourceforge.net>
	- polar lib: improved default tick positions
