@@ -12,7 +12,6 @@ UNIT_SOURCES=$(wildcard *.tex)
 # UNIT_SOURCES:=unittest_3d_0.tex
 
 UNIT_PDF_REFERENCES=$(UNIT_SOURCES:%.tex=references/%.pdf)
-UNIT_PNG_REFERENCES=$(UNIT_PDF_REFERENCES:%.pdf=%.png)
 
 OLD_BRANCH_STORE=Makefile.oldbranch
 
@@ -28,10 +27,7 @@ DEFAULT_REFERENCE_BRANCH=1.3.1
 
 .PHONY: all
 
-all: $(UNIT_PNG_REFERENCES)
-
-%.png: %.pdf
-	convert $< -append $@
+all: $(UNIT_PDF_REFERENCES)
 
 restore:
 	if [ -f $(OLD_BRANCH_STORE) ]; then ./$(OLD_BRANCH_STORE); fi
