@@ -3088,13 +3088,25 @@
 	/pgfplots/compat/labels/1.4/.style=		{/pgfplots/compat/labels/1.3},%
 	/pgfplots/compat/labels/newest/.style=	{/pgfplots/compat/labels/1.3},%
 	/pgfplots/compat/labels/default/.style=	{/pgfplots/compat/labels/pre 1.3},% maintain backwards compatibility for labels :-(
+	%
+	% search for the \pgfplots@compat@scaling@coordmath -- using float
+	% is much more accurate. But it changes the spacing slightly.
+	/pgfplots/compat/scaling/.is choice,
+	/pgfplots/compat/scaling/pre 1.3/.code={\def\pgfplots@compat@scaling@coordmath{pgfbasic}},
+	/pgfplots/compat/scaling/1.3/.style={/pgfplots/compat/scaling/pre 1.3},
+	/pgfplots/compat/scaling/1.4/.code={\def\pgfplots@compat@scaling@coordmath{float}},
+	/pgfplots/compat/scaling/newest/.style={/pgfplots/compat/scaling/1.4},
+	/pgfplots/compat/scaling/default/.style={/pgfplots/compat/scaling/1.4},
 	/pgfplots/compat/.style={%
+		% ATTENTION: *every* /pgfplots/compat/ setting needs to accept
+		% the same choices due to this construction:
 		/pgfplots/compat/anchors=#1,%
 		/pgfplots/compat/labels=#1,%
 		/pgfplots/compat/empty line=#1,%
+		/pgfplots/compat/scaling=#1,%
 	},%
-	/pgfplots/compat/.default=pre 1.3,%
-	/pgfplots/compat=default,%
+	/pgfplots/compat/.default=pre 1.3,% this is used if you type '\pgfplotsset{compat}' without value
+	/pgfplots/compat=default,% this is the initial config.
 	%
 	/pgfplots/show outer normals/.style={%
 		extra description/.append code={
