@@ -1997,26 +1997,26 @@
 \def\pgfplots@BB@for@plotbox@compute@post@scales@relative#1#2#3{%
 	% Consequently, we have to multiply  with 1/(max-min):
 	\pgfmathsubtract@{\pgfplots@xmax}{\pgfplots@xmin}%
-	% compute 1/(xmax - xmin) in float.
+	% compute 1/(xmax - xmin) in float for more recent versions (see /pgfplots/compat/scaling).
 	% I observed that it is much more accurate (lead to scaling differences of up to 10pt!)
-	\pgfplotscoordmath{default}{parsenumber}{\pgfmathresult}%
-	\pgfplotscoordmath{default}{op}{reciprocal}{{\pgfmathresult}}%
-	\pgfplotscoordmath{default}{tofixed}{\pgfmathresult}%
+	\pgfplotscoordmath{\pgfplots@compat@scaling@coordmath}{parsenumber}{\pgfmathresult}%
+	\pgfplotscoordmath{\pgfplots@compat@scaling@coordmath}{op}{reciprocal}{{\pgfmathresult}}%
+	\pgfplotscoordmath{\pgfplots@compat@scaling@coordmath}{tofixed}{\pgfmathresult}%
 	%\expandafter\pgfmath@basic@reciprocal@\expandafter{\pgfmathresult}%
 	\let#1=\pgfmathresult
 	%
 	\pgfmathsubtract@{\pgfplots@ymax}{\pgfplots@ymin}%
-	\pgfplotscoordmath{default}{parsenumber}{\pgfmathresult}%
-	\pgfplotscoordmath{default}{op}{reciprocal}{{\pgfmathresult}}%
-	\pgfplotscoordmath{default}{tofixed}{\pgfmathresult}%
+	\pgfplotscoordmath{\pgfplots@compat@scaling@coordmath}{parsenumber}{\pgfmathresult}%
+	\pgfplotscoordmath{\pgfplots@compat@scaling@coordmath}{op}{reciprocal}{{\pgfmathresult}}%
+	\pgfplotscoordmath{\pgfplots@compat@scaling@coordmath}{tofixed}{\pgfmathresult}%
 	%\expandafter\pgfmath@basic@reciprocal@\expandafter{\pgfmathresult}%
 	\let#2=\pgfmathresult
 	%
 	\ifpgfplots@threedim
 		\pgfmathsubtract@{\pgfplots@zmax}{\pgfplots@zmin}%
-		\pgfplotscoordmath{default}{parsenumber}{\pgfmathresult}%
-		\pgfplotscoordmath{default}{op}{reciprocal}{{\pgfmathresult}}%
-		\pgfplotscoordmath{default}{tofixed}{\pgfmathresult}%
+		\pgfplotscoordmath{\pgfplots@compat@scaling@coordmath}{parsenumber}{\pgfmathresult}%
+		\pgfplotscoordmath{\pgfplots@compat@scaling@coordmath}{op}{reciprocal}{{\pgfmathresult}}%
+		\pgfplotscoordmath{\pgfplots@compat@scaling@coordmath}{tofixed}{\pgfmathresult}%
 		%\expandafter\pgfmath@basic@reciprocal@\expandafter{\pgfmathresult}%
 	\else
 		\def\pgfmathresult{1}%
