@@ -1,3 +1,8 @@
+2011-02-27 Christian Feuersaenger <ludewich@users.sourceforge.net>
+	- finished a lot of refactoring applied to the test framework.
+	- introduced further compatibility option which allows to restore old
+	scaling features (/pgfplots/compat/scaling)
+
 2011-01-20 Christian Feuersaenger <ludewich@users.sourceforge.net>
 	- fixed 'x expr=\coordindex' bug when used in \addplot table \structure
 
